--- a/web/src/pages/DeliveryDetailsPage/deliverydetailspage.html
+++ b/web/src/pages/DeliveryDetailsPage/deliverydetailspage.html
@@ -19,11 +19,11 @@
         <form>
             <div class="input-group">
                 <label for="full-name">Full Name</label>
-                <input type="text" id="full-name" name="full-name" required>
+                <input type="text" id="full-name" name="full-name" placeholder="Enter full name" required>
             </div>
             <div class="input-group">
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="phone" required>
+                <input type="tel" id="phone" name="phone" placeholder="Enter phone number" required>
             </div>
             <h3>Select Address</h3>
             <!-- Saved Address -->
@@ -37,6 +37,11 @@
                 <input type="radio" id="new-address-radio" name="addressRadio" value="new">
                 <label for="new-address-radio" class="address-label">New Address</label>
                 <input type="text" id="new-address" class="address-input" placeholder="Enter new address" disabled>
+            </div>
+            <!-- Accept Emails Checkbox -->
+            <div class="checkbox-group">
+                <input type="checkbox" id="accept-emails" name="accept-emails">
+                <label for="accept-emails">I accept to receive emails</label>
             </div>
             <button type="submit">Submit</button>
         </form>
