another minor changes

--- a/web/src/pages/DeliveryDetailsPage/deliverydetailspage.html
+++ b/web/src/pages/DeliveryDetailsPage/deliverydetailspage.html
@@ -43,7 +43,7 @@
                 <input type="checkbox" id="accept-emails" name="accept-emails">
                 <label for="accept-emails">I accept to receive emails</label>
             </div>
-            <button type="submit">Submit</button>
+            <button type="submit" url="../PaymentGateway/paymentGateway.jsp">Submit</button>
         </form>
     </div>
 
