--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,17 @@
       </div>
     </div>
     </div>
+
+    <!-- Error popup -->
+
+    <div class="error-popup" id="errorPopup">
+        <div class="error-content">
+            <h2>Error</h2>
+            <p id="errorMessage">An error has occurred. Please try again later.</p>
+            <button id="closeErrorPopup">Go Back</button>
+        </div>
+    </div>
+
     <!-- Header section -->
 
     <header>
