--- a/web/src/pages/AddRestaurant/AddRestaurant.html
+++ b/web/src/pages/AddRestaurant/AddRestaurant.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Partner with Us</title>
     <link rel="stylesheet" href="AddRestaurent.css">
-    <link rel="shortcut icon" href="./Public/fabicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
+
+    <!-- Error Popup -->
+    <div class="error-popup" id="errorPopup">
+        <div class="error-content">
+            <h2>Error</h2>
+            <p id="errorMessage">An error has occurred. Please try again later.</p>
+            <button id="closeErrorPopup">Go Back</button>
+        </div>
+    </div>
+    
     <!-- loader -->
     <div class="loader">
         <div id="pl">
@@ -133,7 +143,7 @@
     <header>
         <div class="nav_bar">
             <div class="logo">
-                <img src="../../../Public/images/logo.png" alt="logo" height="70px" >
+                <img src="./Assets/PlateraLogo-red.png" alt="logo">
             </div>
             <div class="nav_links">
                 <ul class="nav_list">
