--- a/web/src/pages/SignUp_SignIn/SignUp_SignIn.html
+++ b/web/src/pages/SignUp_SignIn/SignUp_SignIn.html
@@ -12,6 +12,15 @@
 
 <body>
 
+    <!-- Error Popup -->
+    <div class="error-popup" id="errorPopup">
+        <div class="error-content">
+            <h2>Error</h2>
+            <p id="errorMessage">An error has occurred. Please try again later.</p>
+            <button id="closeErrorPopup">Go Back</button>
+        </div>
+    </div>
+
     <!-- --------Nav Bar------------------------- -->
 
     <header>
