--- a/web/src/pages/feedback/feedback.html
+++ b/web/src/pages/feedback/feedback.html
@@ -5,14 +5,41 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback Page</title>
+    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+
+    <!-- Error Popup -->
+    <div class="error-popup" id="errorPopup">
+        <div class="error-content">
+            <h2>Error</h2>
+            <p id="errorMessage">An error has occurred. Please try again later.</p>
+            <button id="closeErrorPopup">Go Back</button>
+        </div>
+    </div>
+
+    <header>
+        <div class="nav_bar">
+            <div class="logo">
+                <img src="./Assets/PlateraLogo-red.png" alt="logo" height="70px">
+            </div>
+            <div class="nav_links">
+                <ul class="nav_list">
+                    <li><a href="../../../index.html">Home</a></li>
+                    <li><a href="../ContactUs/ContactUs.html">Contact Us</a></li>
+                </ul>
+            </div>
+            <a href="#"><button class="signin" id="signin">Sign In</button></a>
+        </div>
+    </header>
+
+
     <div class="outer-container">
         <img src="./Assets/moon.png" alt="" id="icon">
         <div class="feedback-container">
