--- a/web/index.html
+++ b/web/index.html
@@ -284,59 +284,59 @@
     </section>
 
     <!-- Footer Section -->
-
-
-    <footer>
-        <div class="container_footer">
-            <div class="row">
-                <div class="col">
-                    <img src="./Public/images/PlateraLogo-red.png" alt="">
-                    <p>Platera delivers delicious meals from your favorite local restaurants straight to your door, combining speed and convenience with every order. From quick bites to gourmet dishes, enjoy a world of flavors anytime, anywhere!</p>
-                <div class="col">
-                    <h3>Office <div class="underline"><span></span></div></h3>
-                    <p>ITFL Road</p>
-                    <p>Whitefield, Bangalore</p>
-                    <p>Karnatak, PIN 568629, INDIA</p>
-                    <p class="email_id">support@platera.in</p>
-                    <h4>+91 - 1234567891</h4>
-                </div>
-                <div class="col">
-                    <h3>Links <div class="underline"><span></span></div></h3>
-                    <ul>
-                        <li><a href="./src/pages/FooterLinkPages/Terms&Conditions/Terms&Conditions.html">Terms & Conditions</a></li>
-                        <li><a href="./src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html">Privacy Policy</a></li>
-                        <li><a href="./src/pages/FooterLinkPages/Help/Help.html">Help</a></li>
-                        <!-- <li><a href="#">FAQ</a></li> -->
-                    </ul>
-                </div>
-                <div class="col">
-                    <h3>Newsletter <div class="underline"><span></span></div></h3>
-                    <form>
-                        <img id="mail" src="./Public/images/mail.png" alt="">
-                        <input type="email" name="" id="" placeholder="Enter Your Email Address">
-                        <button type="submit"><img id="send" src="./Public/images/send.png" alt=""></button>
-                    </form>
-                    <div class="social_icon">
-                        <i class="fa-brands fa-facebook"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-pinterest"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                    </div>
+<footer>
+    <div class="container_footer">
+        <div class="row">
+            <div class="col">
+                <img src="./Public/images/PlateraLogo-red.png" alt="">
+                <p>Platera delivers delicious meals from your favorite local restaurants straight to your door, combining speed and convenience with every order. From quick bites to gourmet dishes, enjoy a world of flavors anytime, anywhere!</p>
+            </div> <!-- Close the div tag here -->
+            <div class="col">
+                <h3>Office <div class="underline"><span></span></div></h3>
+                <p>ITFL Road</p>
+                <p>Whitefield, Bangalore</p>
+                <p>Karnatak, PIN 568629, INDIA</p>
+                <p class="email_id">support@platera.in</p>
+                <h4>+91 - 1234567891</h4>
+            </div>
+            <div class="col">
+                <h3>Links <div class="underline"><span></span></div></h3>
+                <ul>
+                    <li><a href="./src/pages/FooterLinkPages/Terms&Conditions/Terms&Conditions.html">Terms & Conditions</a></li>
+                    <li><a href="./src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html">Privacy Policy</a></li>
+                    <li><a href="./src/pages/FooterLinkPages/Help/Help.html">Help</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h3>Newsletter <div class="underline"><span></span></div></h3>
+                <form>
+                    <img id="mail" src="./Public/images/mail.png" alt="">
+                    <input type="email" name="" id="" placeholder="Enter Your Email Address">
+                    <button type="submit"><img id="send" src="./Public/images/send.png" alt=""></button>
+                </form>
+                <div class="social_icon">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
                 </div>
             </div>
         </div>
-        <hr>
-        <p class="copyright">Platera @2024 - All Rights Reserved</p>
-    </footer>
+    </div>
 
-
+</footer>
+<section class="footer-bottom">
+    <hr>
+    <p class="copyright">Platera @2024 - All Rights Reserved</p>
+</section>
+    
     <!-- Script Starts Here -->
 
     
     <!-- All Icon links -->
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <!-- <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> -->
 
 
     <!-- Main Script -->
