--- a/web/src/pages/Confirmations/DeliveryExecutiveConfirmation.html
+++ b/web/src/pages/Confirmations/DeliveryExecutiveConfirmation.html
@@ -1,4 +1,4 @@
-<%@ page import="javax.servlet.http.*, javax.servlet.*" %>
+<!-- <%@ page import="javax.servlet.http.*, javax.servlet.*" %>
 <%@ page language="java" contentType="text/html; charset=UTF-8" %>
 <%
     // Retrieve session attributes
@@ -32,7 +32,7 @@
 //    String vehicleNumber = "MH01AB1234";
 //    String vehicleType = "Car";
 
-%>
+%> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
