--- a/web/src/pages/ContactUs/ContactUs.html
+++ b/web/src/pages/ContactUs/ContactUs.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Contact Us</title>
   <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="ContactUs.css">
+  <link rel="stylesheet" href="./ContactUs.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -98,8 +98,7 @@
         <div class="nav_links">
             <ul class="nav_list">
                 <li><a href="../../../index.html">Home</a></li>
-                <li><a href="../Menu/menu.html">Menu</a></li>
-                <li><a href="../AddRestaurant/AddRestaurant.html">Add Restaurants</a></li>
+                <li id="active"><a href="src/pages/ContactUs/ContactUs.html">Contact Us</a></li>
             </ul>
         </div>
         <div class="buttons">
@@ -193,10 +192,9 @@
             <div class="col">
                 <h3>Links <div class="underline"><span></span></div></h3>
                 <ul>
-                    <li><a href="#">Terms & Conditions</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="../FooterLinkPages/Terms&Conditions/Terms&Conditions.html">Terms & Conditions</a></li>
+                    <li><a href="../FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html">Privacy Policy</a></li>
+                    <li><a href="../FooterLinkPages/Help/Help.html">Help</a></li>
                 </ul>
             </div>
             <div class="col">
