--- a/web/src/pages/SignUp_SignIn/SignUp_SignIn.html
+++ b/web/src/pages/SignUp_SignIn/SignUp_SignIn.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    
     <!-- Error Popup -->
     <div class="error-popup" id="errorPopup">
         <div class="error-content">
@@ -26,13 +26,11 @@
     <header>
         <div class="nav_bar">
             <div class="logo">
-                <img src="../../../Public/images/logo.png" alt="logo" height="70px" >
+                <a href="../../../index.html"><img src="../../../Public/images/PlateraLogo-red.png" alt="logo" height="70px" ></a>
             </div>
             <div class="nav_links">
                 <ul class="nav_list">
                     <li><a href="../../../index.html">Home</a></li>
-                    <li><a href="">Menu</a></li>
-                    <li><a href="../AddRestaurant/AddRestaurant.html">Add Restaurants</a></li>
                     <li><a href="../ContactUs/ContactUs.html">Contact Us</a></li>
                 </ul>
             </div>
