minor p2, minor changes in some web pages.

--- a/web/index.html
+++ b/web/index.html
@@ -39,16 +39,16 @@
             </div>
             <div class="nav_links">
                 <ul class="nav_list">
-                    <li id="active"><a href="./index.html" >Home</a></li>
-                    <li><a href="src/pages/AddRestaurant/AddRestaurant.html">Add Restaurant</a></li>
-                    <li><a href="src/pages/AddDeliveryExecutive/AddDeliveryExecutive.jsp">Delivery Executive</a></li>
-                    <li><a href="src/pages/ContactUs/ContactUs.html">Contact Us</a></li>
+                    <li id="active"><a href="./index.html">Home</a></li>
+                    <li><a href="src/pages/AddRestaurant/AddRestaurant.html" target="_blank">Add Restaurant</a></li>
+                    <li><a href="src/pages/AddDeliveryExecutive/AddDeliveryExecutive.jsp" target="_blank">Delivery Executive</a></li>
+                    <li><a href="src/pages/ContactUs/ContactUs.html" target="_blank">Contact Us</a></li>
                     <!-- The above li had id="secret-admin-link" and style="display: none;" -->
                 </ul>
             </div>
             <div class="buttons">
                 <a href="#"><button class="signin" id="signin">Sign In</button></a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html"><button class="signup">Sign Up</button></a>
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank"><button class="signup">Sign Up</button></a>
             </div>
             <span class="menu" style="color: rgb(255, 255, 255);">
                 <i class="fa-solid fa-bars fa-xl"></i>
@@ -98,13 +98,13 @@
 
                             <div class="remember-forgot">
                                 <label><input type="checkbox">Remember me</label>
-                                <a href="src/pages/ForgotPassword/ForgotPassword.jsp">Forgot password?</a>
+                                <a href="src/pages/ForgotPassword/ForgotPassword.jsp" target="_blank">Forgot password?</a>
                             </div>
 
                             <button type="submit" class="btn">Sign In</button>
 
                             <div class="login-register">
-                                <p>Don't have an account? <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" class="register-link">Sign Up</a></p>
+                                <p>Don't have an account? <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" class="register-link" target="_blank">Sign Up</a></p>
                             </div>
                         </form>
                     </div>
@@ -148,7 +148,7 @@
     <div class="body_container">
         <div class="body_content">
             <div class="body_cards">
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                     <div class="card card1">
                         <img src="./Public/images/card1.jpg" alt="Card Image" class="card-img">
                         <div class="card-content">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                     <div class="card card2">
                         <img src="./Public/images/card2.jpg" alt="Card Image" class="card-img">
                         <div class="card-content">
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                     <div class="card card3">
                         <img src="./Public/images/card3.jpg" alt="Card Image" class="card-img">
                         <div class="card-content">
@@ -178,7 +178,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                     <div class="card card4">
                         <img src="./Public/images/card4.jpg" alt="Card Image" class="card-img">
                         <div class="card-content">
@@ -210,7 +210,7 @@
             <button class="slide-btn prev-btn" onclick="moveSlider(-1)">&#10094;</button>
             
             <div class="restaurant-slider">
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product1.png" alt="Restaurant 1" class="restaurant-image" >
                     <div class="restaurant-info">
@@ -221,7 +221,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product2.png" alt="Restaurant 2" class="restaurant-image">
                     <div class="restaurant-info">
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product3.png" alt="Restaurant 3" class="restaurant-image" style="object-position: top;">
                     <div class="restaurant-info">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product4.png" alt="Restaurant 4" class="restaurant-image">
                     <div class="restaurant-info">
@@ -254,7 +254,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product5.png" alt="Restaurant 5" class="restaurant-image">
                     <div class="restaurant-info">
@@ -265,7 +265,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product6.avif" alt="Restaurant 6" class="restaurant-image">
                     <div class="restaurant-info">
@@ -276,7 +276,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product7.avif" alt="Restaurant 2" class="restaurant-image">
                     <div class="restaurant-info">
@@ -287,7 +287,7 @@
                     </div>
                 </div>
                 </a>
-                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html">
+                <a href="./src/pages/SignUp_SignIn/SignUp_SignIn.html" target="_blank">
                 <div class="restaurant-card">
                     <img src="./Public/images/product8.avif" alt="Restaurant 2" class="restaurant-image">
                     <div class="restaurant-info">
@@ -306,52 +306,52 @@
     </section>
 
     <!-- Footer Section -->
-<footer>
-    <div class="container_footer">
-        <div class="row">
-            <div class="col">
-                <img src="./Public/images/PlateraLogo-red.png" alt="">
-                <p>Platera delivers delicious meals from your favorite local restaurants straight to your door, combining speed and convenience with every order. From quick bites to gourmet dishes, enjoy a world of flavors anytime, anywhere!</p>
-            </div> <!-- Close the div tag here -->
-            <div class="col">
-                <h3>Office <div class="underline"><span></span></div></h3>
-                <p>ITFL Road</p>
-                <p>Whitefield, Bangalore</p>
-                <p>Karnatak, PIN 568629, INDIA</p>
-                <p class="email_id">support@platera.in</p>
-                <h4>+91 - 1234567891</h4>
-            </div>
-            <div class="col">
-                <h3>Links <div class="underline"><span></span></div></h3>
-                <ul>
-                    <li><a href="./src/pages/FooterLinkPages/Terms&Conditions/Terms&Conditions.html">Terms & Conditions</a></li>
-                    <li><a href="./src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html">Privacy Policy</a></li>
-                    <li><a href="./src/pages/FooterLinkPages/Help/Help.html">Help</a></li>
-                </ul>
-            </div>
-            <div class="col">
-                <h3>Newsletter <div class="underline"><span></span></div></h3>
-                <form>
-                    <img id="mail" src="./Public/images/mail.png" alt="">
-                    <input type="email" name="" id="" placeholder="Enter Your Email Address">
-                    <button type="submit"><img id="send" src="./Public/images/send.png" alt=""></button>
-                </form>
-                <div class="social_icon">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-pinterest"></i>
-                    <i class="fa-brands fa-x-twitter"></i>
+    <footer>
+        <div class="container_footer">
+            <div class="row">
+                <div class="col">
+                    <img src="./Public/images/PlateraLogo-red.png" alt="">
+                    <p>Platera delivers delicious meals from your favorite local restaurants straight to your door, combining speed and convenience with every order. From quick bites to gourmet dishes, enjoy a world of flavors anytime, anywhere!</p>
+                </div> <!-- Close the div tag here -->
+                <div class="col">
+                    <h3>Office <div class="underline"><span></span></div></h3>
+                    <p>ITFL Road</p>
+                    <p>Whitefield, Bangalore</p>
+                    <p>Karnatak, PIN 568629, INDIA</p>
+                    <p class="email_id">support@platera.in</p>
+                    <h4>+91 - 1234567891</h4>
+                </div>
+                <div class="col">
+                    <h3>Links <div class="underline"><span></span></div></h3>
+                    <ul>
+                        <li><a href="./src/pages/FooterLinkPages/Terms&Conditions/Terms&Conditions.html" target="_blank">Terms & Conditions</a></li>
+                        <li><a href="./src/pages/FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html" target="_blank">Privacy Policy</a></li>
+                        <li><a href="./src/pages/FooterLinkPages/Help/Help.html" target="_blank">Help</a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h3>Newsletter <div class="underline"><span></span></div></h3>
+                    <form>
+                        <img id="mail" src="./Public/images/mail.png" alt="" target="_blank">
+                        <input type="email" name="" id="" placeholder="Enter Your Email Address">
+                        <button type="submit"><img id="send" src="./Public/images/send.png" alt=""></button>
+                    </form>
+                    <div class="social_icon">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-pinterest"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</footer>
+    </footer>
 
-<section class="footer-bottom">
-    <hr>
-    <p class="copyright">Platera @2024 - All Rights Reserved</p>
-</section>
+    <section class="footer-bottom">
+        <hr>
+        <p class="copyright">Platera @2024 - All Rights Reserved</p>
+    </section>
     
     <!-- Script Starts Here -->
 
