--- a/web/src/pages/ContactUs/ContactUs.html
+++ b/web/src/pages/ContactUs/ContactUs.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <title>Contact Us</title>
+  <title>Platera - Contact Us</title>
   <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./ContactUs.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -79,7 +79,7 @@
                         <button type="submit" class="btn">Sign In</button>
 
                         <div class="login-register">
-                            <p>Don't have an account? <a href="../SignUp_SignIn/SignUp_SignIn.html" class="register-link">Sign Up</a></p>
+                            <p>Don't have an account? <a href="../SignUp_SignIn/SignUp_SignIn.html" class="register-link" target="_blank">Sign Up</a></p>
                         </div>
                     </form>
                 </div>
@@ -97,13 +97,13 @@
         </div>
         <div class="nav_links">
             <ul class="nav_list">
-                <li><a href="../../../index.html">Home</a></li>
-                <li id="active"><a href="src/pages/ContactUs/ContactUs.html">Contact Us</a></li>
+                <li><a href="../../../index.html" target="_blank">Home</a></li>
+                <li id="active"><a href="../ContactUs/ContactUs.html" target="_blank">Contact Us</a></li>
             </ul>
         </div>
         <div class="buttons">
             <a href="#"><button class="signin" id="signin">Sign In</button></a>
-            <a href="../SignUp_SignIn/SignUp_SignIn.html"><button class="signup">Sign Up</button></a>
+            <a href="../SignUp_SignIn/SignUp_SignIn.html" target="_blank"><button class="signup">Sign Up</button></a>
         </div>
         <span class="menu" style="color: rgb(255, 255, 255);">
             <i class="fa-solid fa-bars fa-xl"></i>
@@ -179,7 +179,7 @@
         <div class="row">
             <div class="col">
                 <img src="../../../Public/images/logo.png" alt="">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quam at nisi veniam voluptatem eveniet obcaecati, modi itaque inventore. Nulla laudantium totam, enim autem aut harum.</p>
+                <p>Platera delivers delicious meals from your favorite local restaurants straight to your door, combining speed and convenience with every order. From quick bites to gourmet dishes, enjoy a world of flavors anytime, anywhere!</p>
             </div>
             <div class="col">
                 <h3>Office <div class="underline"><span></span></div></h3>
@@ -192,9 +192,9 @@
             <div class="col">
                 <h3>Links <div class="underline"><span></span></div></h3>
                 <ul>
-                    <li><a href="../FooterLinkPages/Terms&Conditions/Terms&Conditions.html">Terms & Conditions</a></li>
-                    <li><a href="../FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html">Privacy Policy</a></li>
-                    <li><a href="../FooterLinkPages/Help/Help.html">Help</a></li>
+                    <li><a href="../FooterLinkPages/Terms&Conditions/Terms&Conditions.html" target="_blank">Terms & Conditions</a></li>
+                    <li><a href="../FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html" target="_blank">Privacy Policy</a></li>
+                    <li><a href="../FooterLinkPages/Help/Help.html" target="_blank">Help</a></li>
                 </ul>
             </div>
             <div class="col">
