--- a/web/src/pages/RestaurantsInUser/restaurantsInUser.html
+++ b/web/src/pages/RestaurantsInUser/restaurantsInUser.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Navbar</title>
+    <title>Platera - Popular Restaurants Near You</title>
+    <link rel="shortcut icon" href="../../../Public/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./restaurantsInUser.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +12,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+
+    <!-- Loader -->
+    <div class="loader">
+    <div id="pl">
+      <div>
+        <video class="vid" src="../ContactUs/Assets/loader.mp4" autoplay muted loop></video>
+      </div>
+    </div>
+    </div>
+
     <!-- Error Popup -->
     <div class="error-popup" id="errorPopup">
         <div class="error-content">
@@ -23,7 +35,7 @@
     <header>
         <nav class="navbar">
             <div class="nav-left">
-                <img src="./assets/PlateraLogo-red.png" alt="Logo" class="logo">
+                <a href="../Customer/Home.jsp"><img src="./assets/PlateraLogo-red.png" alt="Logo" class="logo"></a>
                 <!-- <div class="search-container">
                     <input
                         type="text"
@@ -39,28 +51,40 @@
                 <span id="selected-location" class="selected-location">Selected Location: None</span> -->
             </div>
             <ul class="nav-links">
-                <li><a href="../Customer/Home.jsp">Home</a></li>
-                <li id="active"><a href="./restaurantsInUser.jsp">Restaurants</a></li>
-                <li><a href="../Menu/menu.jsp">Menu</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="../Customer/Home.jsp" target="_blank">Home</a></li>
+                <li id="active"><a href="./restaurantsInUser.jsp" target="_blank">Restaurants</a></li>
+                <li><a href="../Menu/menu.jsp" target="_blank">Menu</a></li>
+                <li><a href="../ContactUs/ContactUs.html" target="_blank">Contact Us</a></li>
             </ul>
-            <div class="nav-icons">
+            <!-- <div class="nav-icons">
                 <i class="profile-icon fa-solid" id="profile-icon">&#128100;</i>
                 <i class="cart-icon fa-solid" id="cart-icon">&#128722;</i>
-            </div>
+            </div> -->
             <div class="hamburger-menu" id="hamburger-menu">
                 <i class="fa-solid fa-bars"></i>
             </div>
         </nav>
-        <section class="side-section profile-section" id="profile-section">
+        <!-- <section class="side-section profile-section" id="profile-section">
             <button class="close-btn" id="profile-close-btn">&times;</button>
             <p>Profile Section</p>
         </section>
         <section class="side-section cart-section" id="cart-section">
             <button class="close-btn" id="cart-close-btn">&times;</button>
             <p>Cart Section</p>
-        </section>
+        </section> -->
     </header>
+
+
+    <!-- Add this section for the mobile menu -->
+     
+    <div class="mobile-menu" id="mobile-menu">
+        <ul class="mobile-nav-links">
+            <li><a href="../Customer/Home.jsp" target="_blank">Home</a></li>
+            <li id="active"><a href="./restaurantsInUser.jsp" target="_blank">Restaurants</a></li>
+            <li><a href="../Menu/menu.jsp" target="_blank">Menu</a></li>
+            <li><a href="../ContactUs/ContactUs.html" target="_blank">Contact Us</a></li>
+        </ul>
+    </div>
 
     <section class="banner">
         <div class="banner-content">
@@ -124,6 +148,81 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer Section -->
+
+    <footer>
+            <div class="container_footer">
+                <div class="row">
+                    <div class="col">
+                        <img src="./assets/PlateraLogo-red.png" alt="" />
+                        <p>
+                            Platera delivers delicious meals from your favorite local
+                            restaurants straight to your door, combining speed and convenience
+                            with every order. From quick bites to gourmet dishes, enjoy a
+                            world of flavors anytime, anywhere!
+                        </p>
+                    </div>
+                    <div class="col">
+                        <h3>
+                            Office
+                            <div class="underline"><span></span></div>
+                        </h3>
+                        <p>ITFL Road</p>
+                        <p>Whitefield, Bangalore</p>
+                        <p>Karnatak, PIN 568629, INDIA</p>
+                        <p class="email_id">support@platera.in</p>
+                        <h4>+91 - 1234567891</h4>
+                    </div>
+                    <div class="col">
+                        <h3>
+                            Links
+                            <div class="underline"><span></span></div>
+                        </h3>
+                        <ul>
+                            <li>
+                                <a
+                                    href="../FooterLinkPages/Terms&Conditions/Terms&Conditions.html"
+                                     target="_blank">Terms & Conditions</a
+                                >
+                            </li>
+                            <li>
+                                <a href="../FooterLinkPages/PrivacyPolicy/PrivacyPolicy.html"
+                                target="_blank">Privacy Policy</a
+                                >
+                            </li>
+                            <li><a href="../FooterLinkPages/Help/Help.html" target="_blank">Help</a></li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3>
+                            Newsletter
+                            <div class="underline"><span></span></div>
+                        </h3>
+                        <form>
+                            <i class="fa-solid fa-envelope"></i>
+                            <input
+                                type="email"
+                                name=""
+                                id=""
+                                placeholder="Enter Your Email Address"
+                                />
+                            <button type="submit">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </form>
+                        <div class="social_icon">
+                            <i class="fa-brands fa-facebook"></i>
+                            <i class="fa-brands fa-instagram"></i>
+                            <i class="fa-brands fa-pinterest"></i>
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <p class="copyright">Platera @2024 - All Rights Reserved</p>
+    </footer>
     
 
     <script src="./restaurantsInUser.js"></script>
